// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Divider component should render 1`] = `
<div
  className="divider divider--horizontal"
  style={
    Object {
      "borderWidth": "2px",
      "height": "2px",
    }
  }
/>
`;

exports[`The Divider component should render vertically 1`] = `
<div
  className="divider divider--vertical"
  style={
    Object {
      "borderWidth": "2px",
      "width": "2px",
    }
  }
/>
`;
